"Rimossi elementi obsoleti, ottimizzate interazioni UI e dimensioni dei popup; rivisti dialoghi, quest e dati di inventario; aggiornata scena di avvio e logica narrativa."